# tas_car

tas_car_control/: CMakeLists.txt  package.xml
tas_car_control/config/: tas_car_ackermann_controller.yaml  tas_car_joint_controller.yaml
tas_car_control/include/tas_car_control/: cmd_vel_to_ackermann.h  servo_proxy.h
tas_car_control/launch/: move_base.launch  tas_car_control.launch
tas_car_control/launch/config/map_server/: ourFirstShitMap.yaml
tas_car_control/src/: cmd_vel_to_ackermann.cpp  odom_publisher.cpp  servo_proxy.cpp
tas_car_description/: CMakeLists.txt  package.xml
tas_car_description/launch/: tas_car_description.launch
tas_car_description/meshes/: readme.txt
tas_car_description/urdf/: readme.txt  tas_car_description.urdf.xacro
tas_car_description/urdf/include/: gazebo_params.gazebo  macros.xacro  materials.xacro
tas_car_gazebo/launch/: tas_car_gazebo.launch
tas_car_gazebo/worlds/: model.world  robocup.world  test.world
