<?xml version="1.0"?>
<package>
    <name>tas_car_description</name>
    <version>0.0.5</version>
    <description>
        Description of the tas_car RC car. The URDF model description.
    </description>

    <maintainer email="gasper.simonic@tum.de">Gasper Simonic</maintainer>

    <license>Apache 2.0</license>

    <author email="gasper.simonic@tum.de">Gasper Simonic</author>

    <!-- Dependencies. -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Build time dependencies. -->

    <!-- Run time dependencies. -->
    <run_depend>gazebo_ros_control</run_depend>
    <run_depend>hardware_interface</run_depend>
    <run_depend>joint_state_publisher</run_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>rviz</run_depend>
    <run_depend>transmission_interface</run_depend>
    <run_depend>xacro</run_depend>

</package>
